--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 html,
@@ -17,6 +17,10 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+div {
+  box-sizing: border-box;
 }
 
 html.dark {
